kustomize/auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: evg
  labels:
    app: auth-service

spec:
  # Макстмальное количество времени в секундах, в течении которого может быть выполнен деплой
  progressDeadlineSeconds: 450
  # Количество реплик  - по дефолту 1
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      # Число подов, которое может быть создано во время обновления сверх лимита
      maxSurge: 1
      # Максимальное кол-во подов, которое может быть недоступно во время обновления
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: 12345678000/auth-service:07.10amd64-2
          command:
            - java
            - -Duser.timezone=UTC
            - -Xmx400m
            - -XX:+ExitOnOutOfMemoryError
            - -XX:NativeMemoryTracking=summary
            - -jar
            - /app/auth-service.jar
            - -XX:+AlwaysPreTouch
            - -XX:UseG1GC
            - -XX:+ScavengeBeforeFullGC
          resources:
            limits:
              memory: "1Gi"
              cpu: "400m"
            requests:
              memory: "1Gi"
              cpu: "400m"
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
            - name: https
              containerPort: 8000
              protocol: TCP
#              - name: actuator
#                containerPort: 8081
#                protocol: TCP
#      volumes:
#        - name: tmp
#          emptyDir: { }
#        - name: application-volume
#          configMap: application-auth-service
