kustomize/auth-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service
  annotations:
#    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/use-regex: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 80
#    - host: arch.homework
#      http:
#        paths:
#          - path: /otusapp/Evgeniya($|/)(.*)
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: otus
#                port:
#                  number: 8000
